--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
 </head>
 <body>
+
+  <h3> Assignment -1 </h3>
   <ol>
-  <li><a href="Hello_World.html" target="_self">Program that prints <i>Hello World</i> to the screen.</a></li>
-  <li><a href="Input_usr_grets.html" target="_self">Program that asks the user for her name and greets her with her name.</a></li>
-  <li><a href="spec_user.html" target="_self">Program such that only the users Alice and Bob are greeted with their names.</a></li>
-  <li><a href="sum_of.html" target="_self">Function that takes a number n as argument and prints the sum of the numbers 1 to n.</a></li>
-  <li><a href="spec_sumof.html" target="_self">Function such that only multiples of three or five, but not both are considered in the sum.</a></li>
-  <li><a href="multiplication_table.html" target="_self">Function that takes a number 'n' as argument and prints a multiplication table for 'n' up to 12.</a></li>
-  <li><a href="Leap_years.html" target="_self">Function that takes a four digit year number as input and prints the next 100 leap years from the given year.</a></li>
+  <li><a href="Hello_World.html" target="_blank">Program that prints <i>Hello World</i> to the screen.</a></li>
+  <li><a href="Input_usr_grets.html" target="_blank">Program that asks the user for her name and greets her with her name.</a></li>
+  <li><a href="spec_user.html" target="_blank">Program such that only the users Alice and Bob are greeted with their names.</a></li>
+  <li><a href="sum_of.html" target="_blank">Function that takes a number n as argument and prints the sum of the numbers 1 to n.</a></li>
+  <li><a href="spec_sumof.html" target="_blank">Function such that only multiples of three or five, but not both are considered in the sum.</a></li>
+  <li><a href="multiplication_table.html" target="_blank">Function that takes a number 'n' as argument and prints a multiplication table for 'n' up to 12.</a></li>
+  <li><a href="Leap_years.html" target="_blank">Function that takes a four digit year number as input and prints the next 100 leap years from the given year.</a></li>
 </ol>
 </body>
 </html>
