--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <li><a href="sum_of.html" target="_blank">Function that takes a number n as argument and prints the sum of the numbers 1 to n.</a></li>
   <li><a href="spec_sumof.html" target="_blank">Function such that only multiples of three or five, but not both are considered in the sum.</a></li>
   <li><a href="multiplication_table.html" target="_blank">Function that takes a number 'n' as argument and prints a multiplication table for 'n' up to 12.</a></li>
-  <!--<li><a href="Leap_years.html" target="_blank">Function that takes a four digit year number as input and prints the next 100 leap years from the given year.</a></li>-->
+  <li><a href="Leap_years.html" target="_blank">Function that takes a four digit year number as input and prints the next 100 leap years from the given year.</a></li>
 </ol>
 </body>
 </html>
